2007-06-23  Arno Rehn  <arno@arnorehn.de>

	* Added classes for QScintilla2

2007-06-21  Arno Rehn  <arno@arnorehn.de>

	* When the assembly is installed, a symlink is created in the "2.0" directory, so
	  it can be directly referenced from gmcs with -r:qt-dotnet

2007-06-19  Richard Dale  <rdale@foton.es>

	* Added the missing QUiLoader class
	* Improved the layout of the README, and made some changes to the text

2007-06-18  Arno Rehn  <arno@arnorehn.de>

	* Update CSharpMacros.cmake to work currectly with relative paths and improved
	  the build-comments a bit.

2007-06-18  Richard Dale  <rdale@foton.es>

	* Removed the various commented out QAbstractItemModel methods as they
	  aren't needed
	* Fix the code generation for QWizard.cs so it has a C# List for the
	  'const QList<QWizard::WizardButton>&', although it doesn't have a
	  corresponding marshaller yet

2007-06-13  Richard Dale  <rdale@foton.es>

	* Finished fixing the virtual method callback code
	* Removed a memory leak from the 'int&' marshaller
	* Fixed some other minor problems reported by valgrind
	* Don't garbage collect QGraphicsItem instance for now

2007-06-12  Richard Dale  <rdale@foton.es>

	* When the stack was allocated for a virtual method callback, an entry 
	  wasn't being included for the reply value
	* When the arguments for a virtual method callback were copied to the
	  C# arg stack, they were off by one
	* The colliding mice example currently crashes with memory corruption
	  problems

2007-06-10  Richard Dale  <rdale@foton.es>

	* Added an event callback handler to look for ChildAdded and ChildRemoved
	  events. It then creates or removes global references. Now call references
	  'global refs' instead of 'strong refs' in the code.
	* Added some more list marshallers.

2007-06-07  Arno Rehn  <arno@arnorehn.de>

	* Added README
	* Updated AUTHORS and TODO

2007-06-05  Arno Rehn  <arno@arnorehn.de>

	* Improved the build system: